src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2_StringErrorContext.class */
public final class NVTransformFeedback2_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBindTransformFeedbackNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("nglDeleteTransformFeedbacksNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glDeleteTransformFeedbacksNV(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glDeleteTransformFeedbacksNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("nglGenTransformFeedbacksNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glGenTransformFeedbacksNV(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glGenTransformFeedbacksNV()I", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glIsTransformFeedbackNV(I)Z", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glPauseTransformFeedbackNV()V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glResumeTransformFeedbackNV()V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glDrawTransformFeedbackNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glDeleteTransformFeedbacksNV([I)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        methods.put("glGenTransformFeedbacksNV([I)V", "net/labymod/core/laby3d/opengl/error/generated/NVTransformFeedback2ErrorContext");
        return methods;
    }
}
